--- a/CameraApp/app/src/main/res/values/strings.xml
+++ b/CameraApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <resources>
     <string name="app_name">CameraApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="captureButton">Capture</string>
+    <string name="switchCameraButton">Switch camera</string>
+    <string name="galleryButton">Gallery</string>
+    <string name="backButton">Back</string>
+    <string name="share_button_alt">Share</string>
+    <string name="share_hint">Share using</string>
+    <string name="captureModeCamera">Camera</string>
+    <string name="captureMode">HDR</string>
+    <string name="captureModeNight">Night</string>
+    <string name="deleteButton">Delete</string>
+    <string name="deleteDialogBox">Delete current photo?</string>
+    <string name="deleteConfirm">Confirm</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
